fix z-index and scroll menu sizing

--- a/src/Components/css/App.css
+++ b/src/Components/css/App.css
@@ -11,7 +11,7 @@ body {
 
 
 p {
-  font-size: 25px;
+  font-size: 21px;
   margin: 15px;
 }
 
@@ -30,6 +30,7 @@ h1 {
   text-align: right;
   top: -25px;
   width: 100%;
+  z-index: 1;
 }
 
 h2 {
@@ -94,6 +95,7 @@ h3 {
   margin-top: 200px;
   display: flex;
   overflow-x: scroll;
+  height: 50vh;
   scroll-snap-type: x mandatory;
   width: 100%
 }
@@ -116,10 +118,11 @@ h3 {
   text-align: center;
   scroll-snap-align: center;
   width: 300px;
-  height: 450px;
+  height: 90%;
   margin: 10px;
   border: 4px solid #A6432D;
   border-radius: 50px;
+  z-index: 0;
 }
 
 
@@ -132,8 +135,9 @@ h3 {
   text-shadow: 2px 2px #BE8E56;
   position: fixed;
   top: -35px;
-  margin: 25px 10px 0px 200px;
+  margin: 25px 10px 0px 100px;
   width: 105%;
+  z-index: 2;
 }
 
 .title-tag {
@@ -150,7 +154,7 @@ h3 {
   height: 130px;
   width: 105%;
   background: none;
-  z-index: 1;
+  z-index: 2;
 }
 
 
